src-liberty_parse-2.6/test/example.badmem.ref



reading example.badmem.lib...
... Done. 


Checking the database...

NOTE: The technology cmos was specified.
NOTE: No delay_model attribute specified in the library; the delay_model 'generic_cmos' is assumed.
NOTE: Using the cmos syntax tables...
ERROR: example.badmem.lib:18, The bun1 bundle needs to have its 'members' specified first.
The attr clock (line 17) is found before 'members'. (Semantic Error found in data.)
Errors detected

... Done. 


Stats:


Library example:
   cells: 2

Quitting..
Done....
